--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.2",
+    "browser-image-compression": "^2.0.2",
     "dayjs": "^1.11.11",
     "lodash": "^4.17.21",
+    "query-string-for-all": "^7.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
